# RotationDetection-H.264

./: CMakeLists.txt
